--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.18",
     "typescript": "^4.9.5",
