--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -49,6 +52,14 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@emotion/is-prop-valid": "^1.3.1",
+    "@storybook/addon-onboarding": "^9.0.5",
+    "@storybook/preset-create-react-app": "^9.0.5",
+    "@storybook/react-webpack5": "^9.0.6",
+    "@types/uuid": "^10.0.0",
+    "eslint-plugin-storybook": "^9.0.5",
+    "prop-types": "^15.8.1",
+    "storybook": "^9.0.5",
+    "webpack": "^5.99.9"
   }
 }
