--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   },
   "devDependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
+    "@storybook/addon-actions": "^9.0.8",
     "@storybook/addon-onboarding": "^9.0.5",
+    "@storybook/blocks": "^8.6.14",
     "@storybook/preset-create-react-app": "^9.0.5",
     "@storybook/react-webpack5": "^9.0.6",
     "@types/uuid": "^10.0.0",
